complex animated button

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -13,7 +13,7 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
-    
+
     <header class="header">
 
       <div class="logo-box">
@@ -25,6 +25,8 @@
           <span class="heading-primary-main">Outdoors</span>
           <span class="heading-primary-sub">is where life happens</span>
         </h1>
+
+        <a href="#" class="btn btn-white">Discover our tours</a>
       </div>
 
     </header>
